--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "firebase-admin": "^11.5.0",
+    "https": "^1.0.0",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.9"
   }
